.provarCaches/00D5f000005vwGkEAI/objects/rstkf__paysessvoid__c.object
<CustomObject>
    <description>paysessvoid__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__paysessvoid_paysession__r.rstkf__externalid__c + rstkf__paysessvoid_checknumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__paysessvoid_checknumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvoid_checknumber__c</fullName>
        <label>Voided Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvoid_paysession__c</fullName>
        <label>Payment Selection Session</label>
        <referenceTo>rstkf__paysession__c</referenceTo>
        <relationshipLabel>Session Voided Check</relationshipLabel>
        <relationshipName>paysessvoids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Session Voided Check</label>
    <listViews>
        <fullName>rstkf__RS_Session_Voided_Check</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessvoid_checknumber__c</columns>
        <columns>rstkf__paysessvoid_paysession__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Session Voided Check</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Session Voided Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Voided Check</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>